--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -450,6 +450,7 @@
                 .listContainer__arrow svg{
                     width: 3rem;
                     height: 3rem;
+                    fill: #3A3A3B;
                 }
                 .listContainer {
                     position: relative;
@@ -807,6 +808,7 @@
                             .list-row__arrow svg{
                                 width: 3rem;
                                 height: 3rem;
+                                fill:#3A3A3B;
                             }
                             .list-row__item {
                                 margin-top: 3rem;
@@ -3601,6 +3603,7 @@
                 border: 0;
                 background-color: transparent;
                 margin-right: 0.4rem;
+                fill: #3A3A3B;
                 svg {
                     width: 100%;
                     height: 100%;
@@ -3622,6 +3625,50 @@
             .comment__wrapper {
                 padding-left: 1.2rem;
                 padding-bottom: 1.1rem;
+            }
+            .disable {
+                display: none;
+            }
+        }
+        .rev-main__input--not-auth {
+            .comment__wrapper {
+                .not-auth {
+                    display: block;
+                }
+                .comment__name {
+                    display: none;
+                }
+                .comment__info {
+                    display: none;
+                }
+            }
+            .input-container {
+                .button-smile {
+                    display: none;
+                }
+                .input-button {
+                    fill: #9E9E9E;
+                }
+                .input-comment {
+                    display: none;
+                }
+                .disable {
+                    display: block;
+                }
+            }
+        }
+        .not-auth {
+            padding-top: 1.5rem;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 1rem;
+            line-height: 1.4rem;
+            color: #9E9E9E;
+            display: none;
+            a {
+                /* identical to box height */
+                color: #124BF6;
             }
         }
         .sticker-block-right {
