zhenya-after-kostya

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,12 +11,12 @@ html {
     font-size: calc(100vw / 1440 * 10);
   }
 
-  @include breakpoint($cos-bp) {
-    font-size: calc(100vw / 1330 * 10);
-  }
+  // @include breakpoint($cos-bp) {
+  //   font-size: calc(100vw / 1330 * 10);
+  // }
 
   @include breakpoint($xl-bp) {
-    font-size: calc(100vw / 1024 * 10);
+    font-size: calc(100vw / 960 * 10);
   }
 
   @include breakpoint($jb-bp) {
